Fix building links being unreadable in white

--- a/src/builddash/static/css/dashboard.css
+++ b/src/builddash/static/css/dashboard.css
@@ -120,3 +120,8 @@ a {
     text-decoration: none;
     color: white;
 }
+
+#building .build-item a {
+    color: black;
+}
+
